Lock screen time colon looks off when selecting a font which does not include the ratio glyph character
Affected version
Arch Linux with GNOME Shell 3.36.1 on Wayland with 200% scaling.
Bug summary
When having selected a different font than Cantrell (tested with Google Sans, Roboto and Comic Sans), the colon in the lock screen time looks small, blocky and misplaced to the left.
Steps to reproduce
- Set a different font using Tweaks
- Lock the screen
- Check the time
What happened
The colon from the time looks off.
What did you expect to happen
The colon should be larger, round and centered.
Relevant logs, screenshots, screencasts etc.
Edited by Andre Klapper