wall-clock: Stop using ratio character for time

The recommendation was dropped from the HIG 3 years ago without
communicating to developers that they should update their code.

Do that now.

[0] https://gitlab.gnome.org/Teams/Websites/developer.gnome.org-hig/-/commit/41d6b4a56f04

Closes: https://gitlab.gnome.org/GNOME/gnome-shell/-/issues/2618
Closes: https://gitlab.gnome.org/GNOME/gnome-desktop/-/issues/245
Part-of: <https://gitlab.gnome.org/GNOME/gnome-desktop/-/merge_requests/176>